--- a/_config.yaml
+++ b/_config.yaml
@@ -9,7 +9,7 @@ footer: images/background.jpg
 links:
   email: contact@mnlab.com
   # orcid: 0000-0001-8713-9213
-  google-scholar: https://scholar.google.com/citations?user=kj8qmmoAAAAJ&hl=en
+  google-scholar: kj8qmmoAAAAJ&hl
   github: mnlab
   twitter: mnlab
   # youtube: tahazakir
