Update sources.yaml - some links

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,9 +1,13 @@
 - id: doi:10.48550/arXiv.2301.11733
+  link: https://mustafanaseemcom.files.wordpress.com/2022/11/cscw2022_womens-perspectives.pdf
 - id: doi:10.1145/3485447.3512267
+  link: https://mustafanaseemcom.files.wordpress.com/2022/10/www2022_spreadingcrediblehealthinformation.pdf
 - id: doi:10.1145/3555204
   link: https://mustafanaseemcom.files.wordpress.com/2022/10/cscw2022_moderationempowerment.pdf
 - id: doi:10.1145/3530190.3534819
+  link: https://mustafanaseemcom.files.wordpress.com/2022/10/compass2022_powerdifferentials.pdf
 - id: doi:10.1145/3313831.3376683
+  link: https://mustafanaseemcom.files.wordpress.com/2022/10/chi2020_superabbuads.pdf
 - id: doi:10.1145/3392561.3394647
 - id: doi:10.1145/3415217
 - id: doi:10.1145/3392561.3397588
