--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -10,8 +10,10 @@
   link: https://mustafanaseemcom.files.wordpress.com/2022/10/chi2020_superabbuads.pdf
 - id: doi:10.1145/3392561.3394647
 - id: doi:10.1145/3415217
+  link: https://mustafanaseemcom.files.wordpress.com/2022/10/cscw2020_digitalsafespaces.pdf
 - id: doi:10.1145/3392561.3397588
 - id: doi:10.1145/3392561.3394639
+  link: https://mustafanaseemcom.files.wordpress.com/2022/10/ictd2020_patriarchy.pdf
 - id: doi:10.1145/3372224.3418170
 - id: doi:10.1145/3287098.3287143
 - id: doi:10.1145/3197391.3205446
